# bbs-signature

./: .gitignore  Cargo.toml  README.md  deno.json  test.js
.github/workflows/: check.yml  release.yml
lib/: mod.ts
src/: lib.rs
src/keypair/: keypair.ts  mod.rs
src/proof/: core.rs  core.ts  interface.rs  mod.rs  proof.ts  subroutine.rs  subroutines.ts
src/signature/: core.rs  core.ts  interface.rs  mod.rs  readme.md  signature.ts
src/suite/: cipher.rs  ciphers.ts  constants.rs  elements.ts  instance.rs  mod.rs  signature.ts
src/types/: cipher.ts  elements.ts
src/utils/: deserialize.ts  domain.ts  format.rs  format.ts  generator.rs  hash.ts  interface.ts  mod.rs  random.ts  scalar.rs  serialize.rs  serialize.ts
test/: key_test.ts  mod_test.ts  msg_test.ts  proof_test.ts  scalar_test.ts  sign_test.ts
