[package]
name = "bbs-signature"
version = "0.1.9"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bls12_381 = { version = "0.8.0", features = ["groups", "experimental", ] }
sha2 = "0.9.9"
sha3 = "0.9.1"
hex = "0.4.3"
digest = "0.9.0"
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
getrandom = { version = "0.2.15", features = ["js"] }